Dashboard — Add search filter — Hightlight date blue — back button issue
Video
— Remove down arrow from title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="december">December</string>
     <string name="by_name">By name</string>
     <string name="reply">Reply</string>
+    <string name="empty_result">We cannot find the item you are searching for, maybe a little spelling mistake?</string>
     
     <!--Video-->
     <string name="record_video">Record Video</string>
