charity preference has to allow select one charity…; notification option has to be clickable CheckBoxPreference  can be used , value min request is the default value and should be changeable .. balance size font is not accurate .. value of valance has to be dynamic..more options removed… recent request removed too

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
     <string name="more_options">More options</string>
     <string name="recent_request">Recent request</string>
     <string name="logout">Logout</string>
+
+    <!--Charity Preferences-->
+    <string name="charity_1">United Way Worldwide</string>
+    <string name="charity_2">Task Force for Global Health</string>
+    <string name="charity_3">Feeding America</string>
+    <string name="charity_4">Salvation Army</string>
 </resources>
